# pmb-service

./: .coveragerc  .dockerignore  .env  .flake8  .gitignore  Dockerfile  README.md  arche__ingest_md.sh  build_and_run.sh  create_fixtures.sh  crontab  download_files.sh  dump_and_restore.sh  fetch_gn_feature_codes__issue__79.ipynb  fix_domains.sh  issue__112_fix_image_urls.ipynb  issue__162_tagebuchurifix.ipynb  issue__166_bahruris.ipynb  issue__169_merging.ipynb  issue__171_gnfeature_codes.ipynb  issue__17_dataimports.ipynb  issue__17_dataimports_part2.ipynb  issue__17_dataimports_part3_works.ipynb  issue__17_remove_references.ipynb  issue__191_bahr-textverzeichnis_uris.ipynb  issue__209_insel_import.ipynb  issue__212_aufenthaltsorte.ipynb  issue__216_schaubuehne_werke.ipynb  issue__219_schaubuehne.ipynb  issue__222_schubert-persons.ipynb  issue__230_hanslicks_werke.ipynb  issue__237-kino-corrections.ipynb  issue__312_zweig.ipynb  issue__319_brenner.ipynb  issue__78_rm_anno_uris.ipynb  issue__80.ipynb  issue__80_professions.ipynb  issue__98_merge_relation_types.ipynb  manage.py  nginx.conf  (+10 more)
.github/: auto-deploy-values.yaml
acdh_django_widgets/: widgets.py
apis_core/: api_renderers.py  api_routers.py  entity_detail_generic.html  urls.py  utils.py
archemd/: apps.py  arche_md_utils.py  tests.py  urls.py  views.py
browsing/: browsing_utils.py  tests.py  urls.py
dumper/: apps.py  forms.py  tests.py  urls.py  utils.py  views.py
fixtures/: db.json  network.json
media/: arche.ttl  listbibl.xml  listorg.xml  listperson.xml  listplace.xml
network/: admin.py  urls.py  (+7 more)
(+371 files in other folders)
